<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">

    <item
            android:id="@+id/action_settings"
            android:orderInCategory="100"
            android:title="@string/action_settings"/>

    <item
            android:id="@+id/action_newtour"
            android:orderInCategory="100"
            android:title="@string/action_newtour"/>

    <item
            android:id="@+id/action_sendmail"
            android:orderInCategory="100"
            android:title="@string/action_sendmail"/>

    <item
            android:id="@+id/action_graf"
            android:orderInCategory="100"
            android:title="@string/action_graf"/>
    <item
            android:id="@+id/action_extractdb"
            android:orderInCategory="100"
            android:title="@string/action_extractdb"/>
    <item
            android:id="@+id/action_viewarchive"
            android:orderInCategory="100"
            android:title="@string/action_viewarchive"/>
    <item
            android:id="@+id/action_viewactual"
            android:orderInCategory="100"
            android:title="@string/action_viewactual"/>
    <item
            android:id="@+id/action_viewall"
            android:orderInCategory="100"
            android:title="@string/action_viewall"/>
</menu>